charts/cert-manager/self-signed-demo-traefik/site-example-com.ingress.example-com.yaml
# site-example-com.ingress.example-com.yaml
# 参考：https://kubernetes.io/zh/docs/concepts/services-networking/ingress/#tls
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: example-com
  name: tomcat-service
  labels:
    app: tomcat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat-service
  template:
    metadata:
      labels:
        app: tomcat-service
    spec:
      containers:
        - name: tomcat-service
          image: bitnami/nginx:1.21.4-debian-10-r27
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: example-com
  name: tomcat-service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: tomcat-service
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: site-example-com
  namespace: example-com
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - hosts:
        - site.example.com
      secretName: site-example-com-tls
  rules:
    - host: site.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tomcat-service
                port:
                  number: 8080
